generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id                String               @id @default(cuid())
  email             String               @unique
  username          String?              @unique
  passwordHash      String
  role              Role                 @default(CUSTOMER)
  sessionVersion    Int                  @default(0)
  passwordResetKeys PasswordResetToken[]
  cart              Cart?
  wishlist          Wishlist?
  addresses         Address[]
  checkoutSessions  CheckoutSession[]
  orders            Order[]
  createdAt         DateTime             @default(now())
  updatedAt         DateTime             @updatedAt

  @@map("users")
}

model PasswordResetToken {
  id         String    @id @default(cuid())
  userId     String
  user       User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  tokenHash  String    @unique
  expiresAt  DateTime
  usedAt     DateTime?
  createdAt  DateTime  @default(now())

  @@index([userId, expiresAt], map: "password_reset_tokens_user_id_expires_at_idx")
  @@map("password_reset_tokens")
}

model SeedMarker {
  id        String   @id @default(cuid())
  key       String   @unique
  createdAt DateTime @default(now())

  @@map("seed_markers")
}

model RefundPlaceholder {
  id             String   @id @default(cuid())
  externalRef    String?
  status         String   @default("reserved")
  reason         String?
  reservedFor    String   @default("phase-6")
  createdAt      DateTime @default(now())

  /// future: refunds lifecycle - schema placeholder reserved for Phase 6 implementation
  @@map("refund_placeholders")
}

model AuditEventPlaceholder {
  id          String   @id @default(cuid())
  actorId     String?
  entityType  String
  entityId    String
  action      String
  reason      String?
  createdAt   DateTime @default(now())

  /// future: admin audit expansion - reserved to avoid breaking schema changes in later phases
  @@map("audit_event_placeholders")
}

model EmailEventPlaceholder {
  id                String   @id @default(cuid())
  providerMessageId String?
  recipient         String
  template          String
  deliveryStatus    String   @default("reserved")
  createdAt         DateTime @default(now())

  /// future: email delivery analytics - reserved metadata model for async workflow phases
  @@map("email_event_placeholders")
}

model Product {
  id                String          @id @default(cuid())
  slug              String          @unique
  name              String
  description       String
  category          ProductCategory
  gender            ProductGender
  thermalProfile    ProductThermalProfile @default(ALL_SEASON)
  fit               String
  color             String
  priceCents        Int
  currency          String          @default("USD")
  available         Boolean         @default(true)
  stock             Int             @default(0)
  primaryImageUrl   String
  secondaryImageUrl String?
  media             ProductMedia[]
  cartItems         CartItem[]
  wishlistItems     WishlistItem[]
  orderLineItems    OrderLineItem[]
  createdAt         DateTime        @default(now())
  updatedAt         DateTime        @updatedAt

  @@index([category, createdAt], map: "products_category_created_at_idx")
  @@index([gender, category, createdAt], map: "products_gender_category_created_at_idx")
  @@index([thermalProfile, category, createdAt], map: "products_thermal_category_created_at_idx")
  @@index([name], map: "products_name_idx")
  @@map("products")
}

model ProductMedia {
  id          String           @id @default(cuid())
  productId   String
  product     Product          @relation(fields: [productId], references: [id], onDelete: Cascade)
  role        ProductMediaRole
  objectKey   String           @unique
  url         String
  contentType String
  sizeBytes   Int
  altText     String?
  createdAt   DateTime         @default(now())
  updatedAt   DateTime         @updatedAt

  @@unique([productId, role], map: "product_media_product_id_role_key")
  @@index([productId], map: "product_media_product_id_idx")
  @@map("product_media")
}

model Cart {
  id        String     @id @default(cuid())
  userId    String     @unique
  user      User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  items     CartItem[]
  checkoutSessions CheckoutSession[]
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt

  @@map("carts")
}

model CartItem {
  id        String   @id @default(cuid())
  cartId    String
  cart      Cart     @relation(fields: [cartId], references: [id], onDelete: Cascade)
  productId String
  product   Product  @relation(fields: [productId], references: [id], onDelete: Restrict)
  size      ProductSize
  quantity  Int
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([cartId, productId, size], map: "cart_items_cart_id_product_id_size_key")
  @@index([cartId], map: "cart_items_cart_id_idx")
  @@index([productId], map: "cart_items_product_id_idx")
  @@map("cart_items")
}

model Wishlist {
  id        String         @id @default(cuid())
  userId    String         @unique
  user      User           @relation(fields: [userId], references: [id], onDelete: Cascade)
  items     WishlistItem[]
  createdAt DateTime       @default(now())
  updatedAt DateTime       @updatedAt

  @@map("wishlists")
}

model WishlistItem {
  id         String    @id @default(cuid())
  wishlistId String
  wishlist   Wishlist  @relation(fields: [wishlistId], references: [id], onDelete: Cascade)
  productId  String
  product    Product   @relation(fields: [productId], references: [id], onDelete: Restrict)
  createdAt  DateTime  @default(now())
  updatedAt  DateTime  @updatedAt

  @@unique([wishlistId, productId], map: "wishlist_items_wishlist_id_product_id_key")
  @@index([wishlistId], map: "wishlist_items_wishlist_id_idx")
  @@index([productId], map: "wishlist_items_product_id_idx")
  @@map("wishlist_items")
}

model Address {
  id               String            @id @default(cuid())
  userId           String
  user             User              @relation(fields: [userId], references: [id], onDelete: Cascade)
  recipientName    String
  country          String
  city             String
  postalCode       String
  line1            String
  line2            String?
  phone            String?
  isDefault        Boolean           @default(false)
  checkoutSessions CheckoutSession[]
  createdAt        DateTime          @default(now())
  updatedAt        DateTime          @updatedAt

  @@index([userId], map: "addresses_user_id_idx")
  @@index([userId, isDefault], map: "addresses_user_id_is_default_idx")
  @@map("addresses")
}

model CheckoutSession {
  id                       String   @id @default(cuid())
  token                    String   @unique
  userId                   String
  user                     User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  cartId                   String
  cart                     Cart     @relation(fields: [cartId], references: [id], onDelete: Cascade)
  selectedAddressId        String?
  selectedAddress          Address? @relation(fields: [selectedAddressId], references: [id], onDelete: SetNull)
  contactEmail             String?
  contactPhone             String?
  blockingReasons          Json
  cartSnapshot             Json
  priceValidatedAt         DateTime
  pricingSnapshotId        String?
  paymentProviderSessionId String?
  order                    Order?
  expiresAt                DateTime
  isActive                 Boolean  @default(true)
  createdAt                DateTime @default(now())
  updatedAt                DateTime @updatedAt

  /// future: pricing-breakdown - attach subtotal/shipping/tax in subphase 2.2
  /// future: provider-session-link - store Stripe checkout session id in subphase 2.2
  @@index([userId, cartId, isActive], map: "checkout_sessions_user_id_cart_id_is_active_idx")
  @@index([expiresAt], map: "checkout_sessions_expires_at_idx")
  @@index([selectedAddressId], map: "checkout_sessions_selected_address_id_idx")
  @@map("checkout_sessions")
}

model Order {
  id                           String      @id @default(cuid())
  orderNumber                  String      @unique
  userId                       String
  user                         User        @relation(fields: [userId], references: [id], onDelete: Restrict)
  checkoutSessionId            String      @unique
  checkoutSession              CheckoutSession @relation(fields: [checkoutSessionId], references: [id], onDelete: Restrict)
  placeOrderIdempotencyKey     String
  paymentProvider              String      @default("stripe")
  paymentProviderSessionId     String?
  status                       OrderStatus @default(PENDING_PAYMENT)
  currency                     String      @default("USD")
  subtotalCents                Int
  shippingCents                Int
  taxCents                     Int
  totalCents                   Int
  contactEmail                 String
  contactPhone                 String
  shippingMethodName           String      @default("Standard Shipping")
  shippingEtaLabel             String      @default("3-5 days")
  shipToRecipientName          String
  shipToCountry                String
  shipToCity                   String
  shipToPostalCode             String
  shipToLine1                  String
  shipToLine2                  String?
  shipToPhone                  String?
  createdBy                    String
  updatedBy                    String
  paidAt                       DateTime?
  cancelledAt                  DateTime?
  refundedAt                   DateTime?
  shippedAt                    DateTime?
  deliveredAt                  DateTime?
  refundStatusPlaceholder      String?
  refundReasonPlaceholder      String?
  refundExternalRefPlaceholder String?
  items                        OrderLineItem[]
  createdAt                    DateTime    @default(now())
  updatedAt                    DateTime    @updatedAt

  /// future: refunds lifecycle - placeholder schema reserved for later refund operations
  @@unique([userId, checkoutSessionId, placeOrderIdempotencyKey], map: "orders_user_checkout_idempotency_key")
  @@index([userId, createdAt], map: "orders_user_id_created_at_idx")
  @@index([status, createdAt], map: "orders_status_created_at_idx")
  @@map("orders")
}

model OrderLineItem {
  id              String      @id @default(cuid())
  orderId         String
  order           Order       @relation(fields: [orderId], references: [id], onDelete: Cascade)
  productId       String?
  product         Product?    @relation(fields: [productId], references: [id], onDelete: SetNull)
  productSlug     String
  productName     String
  productFit      String
  productColor    String
  productSize     ProductSize
  quantity        Int
  unitPriceCents  Int
  lineSubtotalCents Int
  currency        String      @default("USD")
  primaryImageUrl String
  secondaryImageUrl String?
  createdAt       DateTime    @default(now())
  updatedAt       DateTime    @updatedAt

  @@index([orderId], map: "order_line_items_order_id_idx")
  @@index([productId], map: "order_line_items_product_id_idx")
  @@map("order_line_items")
}

model PaymentWebhookEvent {
  id                String                    @id @default(cuid())
  provider          String                    @default("stripe")
  eventId           String                    @unique
  eventType         String
  providerSessionId String?
  checkoutSessionId String?
  orderId           String?
  status            PaymentWebhookEventStatus @default(RECEIVED)
  receivedAt        DateTime                  @default(now())
  processedAt       DateTime?
  lastError         String?
  createdAt         DateTime                  @default(now())
  updatedAt         DateTime                  @updatedAt

  @@index([provider, eventType], map: "payment_webhook_events_provider_event_type_idx")
  @@index([providerSessionId], map: "payment_webhook_events_provider_session_id_idx")
  @@index([status, receivedAt], map: "payment_webhook_events_status_received_at_idx")
  @@map("payment_webhook_events")
}

enum Role {
  CUSTOMER
  ADMIN
}

enum ProductCategory {
  BOTTOMS
  TOPS
}

enum ProductGender {
  MEN
  WOMEN
}

enum ProductThermalProfile {
  HOT_WEATHER
  COLD_WEATHER
  ALL_SEASON
}

enum ProductSize {
  S
  M
  L
  XL
}

enum ProductMediaRole {
  PRIMARY
  SECONDARY
}

enum OrderStatus {
  PENDING_PAYMENT
  PAID
  PROCESSING
  SHIPPED
  DELIVERED
  CANCELLED
  REFUNDED
}

enum PaymentWebhookEventStatus {
  RECEIVED
  PROCESSING
  PROCESSED
  FAILED
  IGNORED
}
